# TUDHORUS

./: LICENSE.md
horus_gazebo_plugins/: CMakeLists.txt  package.xml
horus_gazebo_plugins/config/: control_dr.cfg
horus_gazebo_plugins/include/: motor_model.h  propulsion_model.h
horus_gazebo_plugins/src/: horus_gazebo_plugin.cc  motor_model.cc  propulsion_model.cc
joy_ctrl/: CMakeLists.txt  package.xml
joy_ctrl/launch/: joy_ctrl.launch
joy_ctrl/src/: joy_teleop.cc
multicopter_description/: CMakeLists.txt  package.xml
multicopter_description/launch/: show_multicopter.launch
multicopter_description/meshes/: HORUS_Motorset_KOAX.dae  HORUS_Motorset_MONO.dae  body.dae  body_lander.dae  lander_1.dae  lander_scaled.dae
multicopter_description/urdf/: robot.urdf.xacro  robot_arm.urdf.xacro  robot_base.urdf.xacro  robot_base_old.urdf.xacro  robot_gazebo.urdf.xacro
robot_control/: CMakeLists.txt  package.xml
robot_control/config/: robot_control.yaml
robot_control/launch/: robot_control.launch
robot_gazebo/: package.xml
robot_gazebo/launch/: spawn_multicopter.launch
